--- a/src/components/tours/tour/_tour.scss
+++ b/src/components/tours/tour/_tour.scss
@@ -2,7 +2,7 @@
 	width: 80%;
 	box-shadow: 3px 3px 4px $green;
 	border-radius: 10px;
-	padding: 10px;
+	padding-bottom: 10px;
 	color: $green;
 	display: flex;
 	flex-direction: column;
@@ -40,5 +40,14 @@
 		display: flex;
 		justify-content: space-evenly;
 	}
+}
+
+.live-tour {
+	font-family: cursive;
+	background-color: $yellow;
+	width: 100%;
+	text-align: center;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
 }
 
