--- a/src/components/createTour/editor/_tourView.scss
+++ b/src/components/createTour/editor/_tourView.scss
@@ -19,12 +19,13 @@
 }
 
 .tour-view-title {
-	background-color: $green;
-	padding: 10px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	color: #fff;
+	@extend %green-header;
+	// background-color: $green;
+	// padding: 10px;
+	// display: flex;
+	// justify-content: space-between;
+	// align-items: center;
+	// color: #fff;
 }
 
 .map-search {
