--- a/src/components/tours/tour/_tour.scss
+++ b/src/components/tours/tour/_tour.scss
@@ -12,14 +12,23 @@
 
 .tour-title {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: center;
+	width: 100%;
+	padding-top: 10px;
 	h3 {
 		margin-right: 10px;
 	}
 	p {
 		font-size: 12px;
 	}
+	.tourguide-pic {
+		height: 60px;
+		width: 60px;
+		border-radius: 50%;
+	}
+	// .tourguide-info {
+	// }
 }
 
 .tour-specs {
