styling, upload tour photo

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,7 @@ $green: #04381C;
 @import './components/createTour/workbench/workbench';
 @import './components/createTour/recorder/recorder';
 @import './components/account/account';
+@import './components/tours/buy/buy';
 
 body, h1, h2, h3, h4, h5, h6 {
   margin: 0;
