--- a/src/components/createTour/recorder/_recorder.scss
+++ b/src/components/createTour/recorder/_recorder.scss
@@ -2,11 +2,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 52px;
-}
-
-.hide {
-	display: none;
+	height: 80px;
 }
 
 .audio-controls {
@@ -15,50 +11,44 @@
 	align-items: center;
 }
 
-.sound-bar {
-	height: 10px;
+.recording {
+	background-color: red;
+	border-radius: 50%;
 	display: flex;
 	justify-content: center;
+	align-items: center;	
+	animation-name: recording;
+	animation-duration: 3s;
+	animation-iteration-count: infinite;
+	transition: ease-in-out;
 }
 
-@mixin sound-animation($sound) {
-	background-color: black;
-	height: 10px;
-	width: 5px;
-	animation-duration: 1s;
-	animation-name: $sound;
+.hide {
+	display: none;
 }
 
-.sound1 {
-	@include sound-animation(sound1)
-}
-
-.sound2 {
-	@include sound-animation(sound2)
-}
-
-.sound3 {
-	@include sound-animation(sound3)
-}
-
-@keyframes sound1 {
+@keyframes recording {
 	0% {
-		width: 10px;
-	} 100% {
-		width: 5px;
-	}
-}
-@keyframes sound2 {
-	0% {
-		width: 100px;
-	} 100% {
-		width: 5px;
-	}
-}
-@keyframes sound3 {
-	0% {
-		width: 200px;
-	} 100% {
-		width: 5px;
+		width: 31px;
+		height: 31px;
+		transition: ease-out;
+	} 
+	// 25% {
+	// 	width: 48px;
+	// 	height: 48px;
+	// } 
+	50% {
+		width: 54px;
+		height: 54px;
+		transition-delay: 0;
+	} 
+	// 75% {
+	// 	width: 48px;
+	// 	height: 48px;
+	// } 
+	100% {
+		width: 31px;
+		height: 31px;
+		transition: ease-in;
 	}
 }
