--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ $green: #04381C;
 @import './components/createTour/recorder/recorder';
 @import './components/account/account';
 @import './components/tours/buy/buy';
+@import './components/createTour/publish/publish';
 
 body, h1, h2, h3, h4, h5, h6 {
   margin: 0;
