--- a/src/components/tours/tour/_tour.scss
+++ b/src/components/tours/tour/_tour.scss
@@ -1,5 +1,5 @@
 .tour {
-	width: 80%;
+	width: 400px;
 	box-shadow: 3px 3px 4px $green;
 	border-radius: 10px;
 	padding-bottom: 10px;
@@ -7,7 +7,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin: 12px 0;
+	margin: 12px 20px;
 }
 
 .tour-title {
