--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,6 @@ button {
 
 .tours {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
