--- a/src/components/createTour/_createTour.scss
+++ b/src/components/createTour/_createTour.scss
@@ -1,14 +1,31 @@
 .create-tour-header {
-	@extend %green-header
+	@extend %green-header;
+	margin-bottom: 20px;
 }
 
 .create_tour_form {
 	margin: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+#click-map-label {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	margin-bottom: 10px;
+}
+
+#tour-name-input {
+	justify-content: center;
+	width: 100%;
 }
 
 .choose-create {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	label {
 		color: $green;
