--- a/src/components/createTour/recorder/_recorder.scss
+++ b/src/components/createTour/recorder/_recorder.scss
@@ -27,26 +27,18 @@
 	display: none;
 }
 
+
+
 @keyframes recording {
 	0% {
 		width: 31px;
 		height: 31px;
 		transition: ease-out;
-	} 
-	// 25% {
-	// 	width: 48px;
-	// 	height: 48px;
-	// } 
-	50% {
+	} 50% {
 		width: 54px;
 		height: 54px;
 		transition-delay: 0;
-	} 
-	// 75% {
-	// 	width: 48px;
-	// 	height: 48px;
-	// } 
-	100% {
+	} 100% {
 		width: 31px;
 		height: 31px;
 		transition: ease-in;
